# neurovisfit

./: .gitignore  .pre-commit-config.yaml  .python-version  CONTRIBUTING.rst  Dockerfile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
cookie_test/: foo.py  performance.py
cookie_test/common/: config.py  dimensions.py  hash.py  splits.py
cookie_test/data/: cache.py  config.toml  json.py  loaders.py  params.py
docs/: index.md  modules.md
neurovisfit/common/: dimensions.py  module.py  random.py
neurovisfit/data/: cache.py  config.toml  dataset.py  loaders.py  params.py  session.py
neurovisfit/evaluation/: metrics.py  predictions.py
neurovisfit/models/: builder.py  config.toml  core.py  example_model_configs.toml  model.py  nonlinearity.py  params.py  readout.py  task_driven.py
neurovisfit/scorers/: predictions.py  scores.py
neurovisfit/trainers/: config.toml  params.py  trainer.py
tests/: conftest.py  test_foo.py  test_foo2.py
tests/common/: test_config.py  test_dimensions.py  test_hash.py  test_random.py  test_splits.py
tests/data/: test_cache.py  test_dataset.py  test_json.py  test_loader.py  test_params.py  test_session.py
tests/models/: test_core.py  test_nonlinearity.py
