[tool.poetry]
name = "neurovisfit"
version = "0.0.2"
description = "This is a template repository for Python projects that use Poetry for their dependency management."
authors = ["Santiago Cadena <fsa.cadena721@gmail.com>"]
repository = "https://github.com/sacadena/neurovisfit"
documentation = "https://sacadena.github.io/neurovisfit/"
readme = "README.md"
packages = [
  {include = "neurovisfit"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "2.0.0,"
torchvision = "0.15.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
tqdm = "^4.65.0"
h5py = "^3.8.0"
scipy = "^1.9.1"
pydantic = "^1.10.8"
neuralpredictors = "^0.3.0"
scikit-image = "^0.20.0"
cornet = { git = "https://github.com/sacadena/CORnet.git", branch = "master" }
ptrnets = { git = "https://github.com/sacadena/ptrnets.git", branch = "master" }
visualpriors = { git = "https://github.com/sacadena/midlevel-reps.git", branch = "visualpriors", tag = "0.3.5" }
tomli = "^2.0.1"
multiprocess = "^0.70.14"
mkdocs = "^1.4.3"



[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}


[tool.poetry.group.analysis.dependencies]
jupyterlab = "^4.0.2"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["neurovisfit"]
exclude = ["tests/*"]
incremental = "False"
disallow_untyped_defs = "True"
disallow_any_unimported = "False"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "False"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["neurovisfit"]

[tool.deptry]
skip_missing = true
skip_transitive = true
skip_misplaced_dev = true
